--- a/WPF/Android/Views/RescheduleRequestDeclineWindow.xaml
+++ b/WPF/Android/Views/RescheduleRequestDeclineWindow.xaml
@@ -66,7 +66,7 @@
         <Label Content="Additional info:" HorizontalAlignment="Center" VerticalAlignment="Center"  FontFamily="{StaticResource Roboto}" FontSize="22"
              Style="{StaticResource Header}" Padding="0" FontWeight="Medium"/>
         <Border Height="140" Grid.Row="1" Width="250" BorderBrush="Black" BorderThickness="1" VerticalAlignment="Top" Margin="0,10,0,0"  HorizontalAlignment="Center">
-            <TextBox Text="{Binding RescheduleRequestDTO.OwnerComment}" Margin="0" Background="Transparent"/>
+            <TextBox Text="{Binding RescheduleRequestDTO.OwnerComment}" Margin="0" Background="Transparent" MaxLength="256"/>
         </Border>
         <Button Grid.Row="2" Height="50" Width="130" FontSize="16" VerticalAlignment="Top" Click="Button_Click" Background="{StaticResource Green}"
                 Style="{StaticResource DisabledButtonStyle}">
