--- a/WPF/Android/Views/AccommodationGuidancePage.xaml
+++ b/WPF/Android/Views/AccommodationGuidancePage.xaml
@@ -78,25 +78,25 @@
                     <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1"  Grid.Column="0" Grid.Row="1" 
                             VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0">
                         <StackPanel Orientation="Horizontal">
-                            <Image Source="{StaticResource LocationIcon}" Height="30"  Width="30"/>
+                            <Image Source="{StaticResource LocationIcon}" Height="25"  Width="25" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <Label Content="{Binding FirstLocation.LocationInfoTemplate}" 
-                               Style="{StaticResource Header}" Background="Transparent" Foreground="Black"/>
+                               Style="{StaticResource Header}" Background="Transparent" Foreground="Black" FontSize="20"/>
                         </StackPanel>
                     </Border>
 
                     <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1"  Grid.Column="0" Grid.Row="2" 
          VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0">
                         <StackPanel Orientation="Horizontal">
-                            <Image Source="{StaticResource LocationIcon}" Height="30"  Width="30"/>
+                            <Image Source="{StaticResource LocationIcon}" Height="25"  Width="25" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <Label Content="{Binding SecondLocation.LocationInfoTemplate}"
-                        Style="{StaticResource Header}" Background="Transparent" Foreground="Black"/>
+                        Style="{StaticResource Header}" Background="Transparent" Foreground="Black" FontSize="20"/>
                         </StackPanel>
                     </Border>
 
                     <Button x:Name="FirstLocationButton" Grid.Row="1" Grid.Column="1" Height="60" Width="130" Style="{StaticResource DisabledButtonStyle}" HorizontalAlignment="Center"
                             VerticalAlignment="Center" Click="FirstLocationButton_Click">
                         <StackPanel Orientation="Horizontal" Margin="5,0,0,0">
-                            <Image Source="{StaticResource AddIcon}" Height="30" Width="30"/>
+                            <Image Source="{StaticResource AddIcon}" Height="30" Width="30" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <Label Content="Add more" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
                         </StackPanel>
                     </Button>
@@ -104,7 +104,7 @@
                     <Button x:Name="SecondLocationButton" Grid.Row="2" Grid.Column="1" Height="60" Width="130" Style="{StaticResource DisabledButtonStyle}"
                             Click="SecondLocationButton_Click" HorizontalAlignment="Center">
                         <StackPanel Orientation="Horizontal" Margin="5,0,0,0">
-                            <Image Source="{StaticResource AddIcon}" Height="30" Width="30"/>
+                            <Image Source="{StaticResource AddIcon}" Height="30" Width="30" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <Label Content="Add more" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
                         </StackPanel>
                     </Button>
@@ -128,24 +128,24 @@
                     <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1" 
                             Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0">
                         <StackPanel Orientation="Horizontal">
-                            <Image Source="{StaticResource LocationIcon}" Height="30"  Width="30"/>
+                            <Image Source="{StaticResource LocationIcon}" Height="25"  Width="25" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <Label Content="{Binding ThirdLocation.LocationInfoTemplate}"
-                   Style="{StaticResource Header}" Background="Transparent" Foreground="Black"/>
+                   Style="{StaticResource Header}" Background="Transparent" Foreground="Black" FontSize="20"/>
                         </StackPanel>
                     </Border>
 
                     <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1" 
          Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10,0,0,10">
                         <StackPanel Orientation="Horizontal">
-                            <Image Source="{StaticResource LocationIcon}" Height="30"  Width="30"/>
+                            <Image Source="{StaticResource LocationIcon}" Height="25"  Width="25" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <Label Content="{Binding FourthLocation.LocationInfoTemplate}"
-            Style="{StaticResource Header}" Background="Transparent" Foreground="Black"/>
+            Style="{StaticResource Header}" Background="Transparent" Foreground="Black" FontSize="20"/>
                         </StackPanel>
                     </Border>
 
 
                     <Button x:Name="CloseAccomodationButton" Grid.Row="1" Grid.Column="1" Height="60" Width="130" Style="{StaticResource DisabledButtonStyle}" 
-                            VerticalAlignment="Center" Command="{Binding CloseCommand}" Click="CloseAccomodationButton_Click" HorizontalAlignment="Center" Margin="0,0,10,0">
+                            VerticalAlignment="Center" Command="{Binding CloseCommand}" Click="CloseAccomodationButton_Click" HorizontalAlignment="Center" Margin="0,0,3,0">
                         <StackPanel Orientation="Horizontal" Margin="5,0,0,0">
                             <Image Source="{StaticResource LockedIcon}" Height="30" Width="30"/>
                             <Label Content="Close" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}" Margin="10,0,0,0"/>
