Small hci changes

--- a/WPF/Android/Views/ForumCommentsPage.xaml
+++ b/WPF/Android/Views/ForumCommentsPage.xaml
@@ -131,15 +131,6 @@
                                 <Image Source="{StaticResource SendIconBeige}" Width="25" Height="25" RenderOptions.BitmapScalingMode="HighQuality"/>
                                 <TextBlock Text="Post!" FontSize="18" Style="{StaticResource ButtonLabelTextBlock}" FontWeight="Medium" Margin="0,5,0,0"/>
                             </StackPanel>
-                            <Button.Style>
-                                <Style TargetType="Button">
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding Text, ElementName=commentTextBox}" Value="">
-                                            <Setter Property="IsEnabled" Value="False"/>
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Button.Style>
                         </Button>
                     </Grid>
                     <Border.Style>
@@ -147,6 +138,26 @@
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding ForumDTO.IsClosed}" Value="True">
                                     <Setter Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Border.Style>
+                </Border>
+
+
+                <Border Grid.Row="2" BorderBrush="Black" BorderThickness="0,1,0,0" Background="{StaticResource SoftGreen}" Height="40" VerticalAlignment="Bottom">
+                    <Grid>
+                        <Label Content="&lt;&lt; Forum closed >>" FontFamily="{StaticResource Roboto}" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center"
+                               FontStyle="Oblique"/>
+                    </Grid>
+                    <Border.Style>
+                        <Style TargetType="Border">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding ForumDTO.IsClosed}" Value="False">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding ForumDTO.IsClosed}" Value="True">
+                                    <Setter Property="Visibility" Value="Visible"/>
                                 </DataTrigger>
                             </Style.Triggers>
                         </Style>
