--- a/WPF/Web/Views/ReviewsPage.xaml
+++ b/WPF/Web/Views/ReviewsPage.xaml
@@ -54,12 +54,16 @@
             <Label Grid.Column="0" Style="{StaticResource MainLabel}"
                    Content="Reviews received by accommodation owners" />
 
-            <Button x:Name="buttonGenerateReport" Grid.Column="1" Style="{StaticResource ButtonStyle}" Click="GenerateReportClick">
-                <WrapPanel>
-                    <Image Style="{StaticResource ButtonImage}" Source="{StaticResource DocumentIcon}"/>
-                    <TextBlock Text="Generate report" Style="{StaticResource ButtonText}"/>
-                </WrapPanel>
-            </Button>
+            <StackPanel Grid.Column="1" VerticalAlignment="Center" Orientation="Vertical">
+                <Button x:Name="buttonGenerateReport" Style="{StaticResource ButtonStyle}" Click="GenerateReportClick">
+                    <WrapPanel>
+                        <Image Style="{StaticResource ButtonImage}" Source="{StaticResource DocumentIcon}"/>
+                        <TextBlock Text="Generate report" Style="{StaticResource ButtonText}"/>
+                    </WrapPanel>
+                </Button>
+                <CheckBox x:Name="checkBoxPreview" Content="Preview report" Margin="0 5 0 0" Foreground="White" Width="100" Cursor="Hand"/>
+            </StackPanel>
+
         </Grid>
 
         <Grid Grid.Row="1">
