--- a/WPF/Web/Views/ForumsPage.xaml
+++ b/WPF/Web/Views/ForumsPage.xaml
@@ -4,7 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
-      mc:Ignorable="d" 
+      xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+      mc:Ignorable="d"
       d:DesignHeight="620" d:DesignWidth="1000"
       Title="ForumsPage">
 
@@ -46,10 +47,28 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0">
-                <Border BorderThickness="0 0 3 0" BorderBrush="{StaticResource HardGreen}">
-                </Border>
-            </Grid>
+            <Border Grid.Column="0" BorderThickness="0 0 3 0" BorderBrush="{StaticResource HardGreen}">
+                <Grid Margin="0 80 0 0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
+
+                    <StackPanel Grid.Row="0" Orientation="Vertical" Margin="10 10 10 0">
+                        <Label Content="Most discussed locations" HorizontalAlignment="Center" 
+                               FontSize="15" FontWeight="SemiBold" Margin="0 10 0 10"/>
+
+                        <lvc:PieChart x:Name="PopularLocationsPieChart" Width="150" Height="150"/>
+                    </StackPanel>
+
+                    <StackPanel Grid.Row="1" Orientation="Vertical" Margin="10 10 10 0">
+                        <Label Content="Most trusted users" HorizontalAlignment="Center" 
+                               FontSize="15" FontWeight="SemiBold" Margin="0 10 0 10"/>
+                        
+                        <lvc:CartesianChart/>
+                    </StackPanel>
+                </Grid>
+            </Border>
 
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
