--- a/WPF/Web/Views/ForumsPage.xaml
+++ b/WPF/Web/Views/ForumsPage.xaml
@@ -55,17 +55,31 @@
                     </Grid.RowDefinitions>
 
                     <StackPanel Grid.Row="0" Orientation="Vertical" Margin="10 10 10 0">
-                        <Label Content="Most discussed locations" HorizontalAlignment="Center" 
+                        <Label Content="Most relevant locations" HorizontalAlignment="Center" 
                                FontSize="15" FontWeight="SemiBold" Margin="0 10 0 10"/>
 
                         <lvc:PieChart x:Name="PopularLocationsPieChart" Width="150" Height="150"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="1" Orientation="Vertical" Margin="10 10 10 0">
-                        <Label Content="Most trusted users" HorizontalAlignment="Center" 
-                               FontSize="15" FontWeight="SemiBold" Margin="0 10 0 10"/>
-                        
-                        <lvc:CartesianChart/>
+                        <Label Content="Best rated owners" HorizontalAlignment="Center" 
+                               FontSize="15" FontWeight="SemiBold" Margin="0 10 0 30"/>
+
+                        <lvc:CartesianChart Name="OwnerRatingChart" Height="180">
+                            <lvc:CartesianChart.AxisX>
+                                <lvc:Axis Title="Average rating" MinValue="0" MaxValue="5" Foreground="Gray">
+                                    <lvc:Axis.Separator>
+                                        <lvc:Separator Stroke="Gray" Step="1" IsEnabled="True"/>
+                                    </lvc:Axis.Separator>
+                                </lvc:Axis>
+                            </lvc:CartesianChart.AxisX>
+                            <lvc:CartesianChart.AxisY>
+                                <lvc:Axis Foreground="Black"/>
+                            </lvc:CartesianChart.AxisY>
+                            <lvc:CartesianChart.Series>
+                                <lvc:RowSeries Fill="{StaticResource Green}" Name="ratingsSeries"/>
+                            </lvc:CartesianChart.Series>
+                        </lvc:CartesianChart>
                     </StackPanel>
                 </Grid>
             </Border>
