feat: A lot of changes

--- a/App.xaml
+++ b/App.xaml
@@ -66,6 +66,7 @@
         <BitmapImage x:Key="PlaneIcon" UriSource="Resources/Images/Icons/plane-icon.png"/>
         <BitmapImage x:Key="OwnerIcon" UriSource="Resources/Images/owner-icon.png"/>
         <BitmapImage x:Key="VerifiedIcon" UriSource="Resources/Images/Icons/verified-icon.png"/>
+        <BitmapImage x:Key="PDFDownload" UriSource="Resources/Images/Icons/beige-pdf.png"/>
 
         <SolidColorBrush x:Key="HardGreen" Color="#12372A"/>
         <SolidColorBrush x:Key="Green" Color="#436850"/>
