--- a/WPF/Desktop/Views/CreateComplexRequestWindow.xaml
+++ b/WPF/Desktop/Views/CreateComplexRequestWindow.xaml
@@ -30,6 +30,7 @@
             <Setter Property="Margin" Value="10"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Cursor" Value="Hand"/>
         </Style>
     </Window.Resources>
     <Grid Background="{StaticResource Beige}">
