--- a/WPF/Desktop/Views/RequestsPage.xaml
+++ b/WPF/Desktop/Views/RequestsPage.xaml
@@ -43,6 +43,7 @@
             <Setter Property="Margin" Value="5"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="FontSize" Value="24"/>
+            <Setter Property="Cursor" Value="Hand"/>
         </Style>
         <Style TargetType="TextBlock" x:Key="Info">
             <Setter Property="FontSize" Value="12"/>
