--- a/WPF/Desktop/Views/TouristFollowLiveWindow.xaml
+++ b/WPF/Desktop/Views/TouristFollowLiveWindow.xaml
@@ -4,130 +4,207 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookingApp.WPF.Desktop.Views"
+        xmlns:converters="clr-namespace:BookingApp.WPF.Utils.Converters"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="TouristFollowLiveWindow" Height="768" Width="1366">
     <Window.Resources>
-        <Style TargetType="TextBox" x:Key="TextBoxStyle">
-            <Setter Property="Width" Value="150"/>
-            <Setter Property="Height" Value="50"/>
-            <Setter Property="Margin" Value="5"/>
+        <converters:BooleanToVisibilityConverter x:Key="Visibility"/>
+        <Style TargetType="TextBlock" x:Key="Title">
+            <Setter Property="FontSize" Value="24"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
         </Style>
-        <Style TargetType="Button" x:Key="ButtonStyle">
-            <Setter Property="Background" Value="#88C0D0"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Width" Value="Auto"/>
-            <Setter Property="Height" Value="Auto"/>
-            <Setter Property="Margin" Value="5"/>
+        <Style TargetType="TextBlock" x:Key="SmallText">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Foreground" Value="Black"/>
         </Style>
-        <Style TargetType="DataGrid" 
-               x:Key="DataGridStyle">
-            <Setter Property="AutoGenerateColumns" 
-                    Value="False"/>
-            <Setter Property="IsReadOnly" 
-                    Value="True"/>
-            <Setter Property="CanUserAddRows" 
-                    Value="False"/>
-            <Setter Property="FontSize" 
-                    Value="16"/>
+        <Style TargetType="Border" x:Key="BorderStyle">
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="0.5"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="Info">
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="Image" x:Key="Image">
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Margin" Value="0, 0, 5, 0"/>
         </Style>
     </Window.Resources>
-    <Grid Margin="5">
+    <Grid Background="{StaticResource Beige}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="1.25*"/>
         </Grid.ColumnDefinitions>
 
-        <Border BorderBrush="Black"
-            BorderThickness="1">
-            <Grid Margin="5">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.ColumnSpan="2"
+                       Text="{Binding SelectedTour.Name}"
+                       Style="{StaticResource Title}"
+                       Margin="10, 5, 10, 10"
+                       TextWrapping="Wrap"/>
+            <Grid Grid.Row="1"
+                  HorizontalAlignment="Left"
+                  Margin="10, 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="{StaticResource LocationIcon}"
+                           Style="{StaticResource Image}"/>
+                    <TextBlock Style="{StaticResource Info}">
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat="{}{0}, {1}">
+                                <Binding Path="SelectedTour.Location.City"/>
+                                <Binding Path="SelectedTour.Location.Country"/>
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"
+                            Grid.Row="1">
+                    <Image Source="{StaticResource ScheduledIcon}"
+                           Style="{StaticResource Image}"/>
+                    <TextBlock Style="{StaticResource Info}"
+                               Text="{Binding SelectedTour.TouristDateTemplate, UpdateSourceTrigger=PropertyChanged}"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"
+                            Grid.Row="2">
+                    <Image Source="{StaticResource LanguageIcon}"
+                           Style="{StaticResource Image}"/>
+                    <TextBlock Grid.Row="2"
+                               Text="{Binding SelectedTour.Language.Name}"
+                               Style="{StaticResource Info}"/>
+
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"
+                            Grid.Row="3">
+                    <Image Source="{StaticResource Stopwatch}"
+                           Style="{StaticResource Image}"/>
+                    <TextBlock Grid.Row="3"
+                               Text="{Binding SelectedTour.Duration}"
+                               Style="{StaticResource Info}"/>
+
+                </StackPanel>
+            </Grid>
+            <Border Style="{StaticResource BorderStyle}"
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Background="{StaticResource SoftGreen}">
+                <ScrollViewer>
+                    <TextBlock Text="{Binding SelectedTour.Description}"
+                               FontSize="14"
+                               TextWrapping="Wrap"
+                               Margin="5"/>
+                </ScrollViewer>
+            </Border>
+            <Image Source="{Binding SelectedTour.ProfilePictures[0]}"
+                   Grid.Row="2"
+                   Grid.ColumnSpan="2"
+                   Stretch="UniformToFill"
+                   Margin="10, 0"/>
+            <Image Source="{Binding SelectedTour.ProfilePictures[1]}"
+                   Grid.Row="3"
+                   Stretch="UniformToFill"
+                   Margin="10, 10, 5, 10"/>
+            <Image Source="{Binding SelectedTour.ProfilePictures[2]}"
+                   Grid.Row="3"
+                   Grid.Column="1"
+                   Stretch="UniformToFill"
+                   Margin="5, 10, 10, 10"/>
+        </Grid>
+
+        <Border Grid.Column="1"
+                Style="{StaticResource BorderStyle}"
+                Margin="0, 10, 10, 10">
+            <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0">
-                    <TextBlock FontSize="24"
-                               FontWeight="Bold">
-                        Points of interest:
-                    </TextBlock>
-                    <DataGrid ItemsSource="{Binding PointsOfInterest}"
-                              Style="{StaticResource DataGridStyle}">
+                <Grid Margin="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Style="{StaticResource Title}"
+                               Text="Points of interest:"
+                               Margin="0, 0, 0, 10"/>
+                    <DataGrid ItemsSource="{Binding PointsOfInterest, UpdateSourceTrigger=PropertyChanged}"
+                              Background="{StaticResource SoftGreen}"
+                              AutoGenerateColumns="False"
+                              CanUserAddRows="False"
+                              FontSize="16"
+                              Grid.Row="1">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Point of interest"
-                                                Binding="{Binding Name}"/>
-                            <DataGridCheckBoxColumn Header="Is Checked"
-                                                    Binding="{Binding IsChecked}"/>
+                            <DataGridTextColumn Header="Point of interest" 
+                                                Width="*"
+                                                Binding="{Binding Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <DataGridCheckBoxColumn Header="Is checked"
+                                                    Width="*"
+                                                    Binding="{Binding IsChecked, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
+
                         </DataGrid.Columns>
                     </DataGrid>
-                </StackPanel>
-                <StackPanel Grid.Row="1">
-                    <TextBlock FontSize="24"
-                               FontWeight="Bold">
-                        Present participants:
-                    </TextBlock>
-                    <DataGrid ItemsSource="{Binding Passengers}"
-                              Style="{StaticResource DataGridStyle}">
+                </Grid>
+
+                <Grid Grid.Row="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="Present participants:"
+                               Margin="0, 0, 0, 10"
+                               Style="{StaticResource Title}"/>
+                    <Border Background="{StaticResource SoftGreen}"
+                            Panel.ZIndex="1000"
+                            Grid.Row="1"
+                            Margin="10, 0, 10, 10"
+                            Visibility="{Binding IsTouristPresent, Converter={StaticResource Visibility}, ConverterParameter=Inverse}">
+                        <TextBlock Style="{StaticResource Title}"
+                                   VerticalAlignment="Center"
+                                   Text="This feature will be available once you have join this tour!"
+                                   TextWrapping="Wrap"/>
+                    </Border>
+                    <DataGrid ItemsSource="{Binding Passengers, UpdateSourceTrigger=PropertyChanged}"
+                              Background="{StaticResource SoftGreen}"
+                              AutoGenerateColumns="False"
+                              CanUserAddRows="False"
+                              Grid.Row="1"
+                              Margin="10, 0, 10, 10"
+                              FontSize="16">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Name"
-                                                Binding="{Binding Name}"/>
+                            <DataGridTextColumn Header="Name" 
+                                                Width="*"
+                                                Binding="{Binding Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Surname"
-                                                Binding="{Binding Surname}"/>
+                                                Width="*"
+                                                Binding="{Binding Surname, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Age"
-                                                Binding="{Binding Age}"/>
+                                                Width="0.5*"
+                                                Binding="{Binding Age, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
-                </StackPanel>
+                </Grid>
             </Grid>
         </Border>
-
-        <Grid Width="568"
-              Height="685"
-              Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Image Grid.Row="0"
-                   Margin="0, 0, 0, 5"
-                   Source="{Binding SelectedTour.ProfilePictures[0]}"
-                   Width="500">
-
-            </Image>
-            <WrapPanel Grid.Row="1"
-                       Margin="0, 0, 0, 5">
-                <Image Margin="2.5, 0, 0, 5"
-                       Source="{Binding SelectedTour.ProfilePictures[1]}"
-                       Width="250">
-
-                </Image>
-                <Image Margin="2.5, 0, 0, 0"
-                       Source="{Binding SelectedTour.ProfilePictures[2]}"
-                       Width="250">
-
-                </Image>
-            </WrapPanel>
-            <Grid Grid.Row="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <StackPanel Width="214"
-                            Grid.Column="0">
-                    <TextBlock Text="{Binding SelectedTour.Name, UpdateSourceTrigger=PropertyChanged}" FontSize="40" FontWeight="Bold"/>
-                    <TextBlock Text="{Binding SelectedTour.LocationTemplate, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
-                    <TextBlock Text="{Binding SelectedTour.LanguageTemplate, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
-                    <TextBlock Text="{Binding SelectedTour.Duration, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
-                </StackPanel>
-                <Border BorderBrush="Black" 
-                        BorderThickness="1"
-                        Grid.Column="1">
-                    <TextBlock  Width="354"
-                                Height="269"
-                                Text="{Binding SelectedTour.Description, UpdateSourceTrigger=PropertyChanged}"/>
-                </Border>
-            </Grid>
-        </Grid>
-
     </Grid>
 </Window>
