--- a/WPF/Desktop/Views/TouristVouchersPage.xaml
+++ b/WPF/Desktop/Views/TouristVouchersPage.xaml
@@ -7,37 +7,49 @@
   d:DesignHeight="450" d:DesignWidth="1594"
   Title="TouristVouchersPage">
     <Page.Resources>
-
+        <Style TargetType="Border" x:Key="Border">
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="0.5"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
     </Page.Resources>
-
-    <ScrollViewer Grid.Row="1" 
-                  Margin="10, 5, 10, 10">
+    <Grid Background="{StaticResource Beige}">
+    <ScrollViewer Margin="10">
         <ItemsControl ItemsSource="{Binding VouchersOnDisplay}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Border>
+                    <Border Margin="0, 0, 10, 10"
+                            Style="{StaticResource Border}"
+                            Height="250">
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
-                            <Image Source="{Binding Image}" 
-                                   Grid.Column="0" 
-                                   SnapsToDevicePixels="True"
-                                   Margin="5"
-                                   />
-                            <StackPanel Grid.Column="1">
-                                <TextBlock FontWeight="Bold">
-                                    Expire Date
-                                </TextBlock>
-                                <TextBlock Text="{Binding ExpireDate}">
-                                    
-                                </TextBlock>
-                            </StackPanel>
-                        </Grid>
+                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Border Style="{StaticResource Border}"
+                                        Margin="10">
+                                    <Image Source="{Binding Image}"
+                                           Stretch="Fill"/>
+                                </Border>
+                                <StackPanel Grid.Column="1"
+                                            VerticalAlignment="Center"
+                                            HorizontalAlignment="Center">
+                                    <TextBlock Text="Expire date"
+                                               FontSize="24"
+                                               FontWeight="Bold"
+                                               Style="{StaticResource TextBlock}"/>
+                                    <TextBlock Text="{Binding ExpireDate}"
+                                               Style="{StaticResource TextBlock}"
+                                               FontSize="16"/>
+                                </StackPanel>
+                            </Grid>
                     </Border>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
     </ScrollViewer>
+    </Grid>
 </Page>
