--- a/WPF/Desktop/Views/TouristMainWindow.xaml
+++ b/WPF/Desktop/Views/TouristMainWindow.xaml
@@ -76,6 +76,10 @@
                         </StackPanel>
                     </Button>
                 </StackPanel>
+                <Image Grid.Row="1"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Source="{StaticResource BeigeLogo}"/>
                 <StackPanel Grid.Row="2">
                     <Button x:Name="NotificationsButton"
                             Click="NotificationsButton_Click"
