--- a/WPF/Web/Views/ReviewAccommodationModalDialog.xaml
+++ b/WPF/Web/Views/ReviewAccommodationModalDialog.xaml
@@ -89,28 +89,38 @@
                 <ScrollViewer>
                     <StackPanel Margin="10 0 0 0">
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="Owner correctness:" Style="{StaticResource LabelStyle}"/>
-                            <Label Style="{StaticResource LabelStyle}" Content="{Binding ElementName=sliderOwnerCorrectness, Path=Value}"/>
-                            <Slider  x:Name="sliderOwnerCorrectness" Minimum="1" Maximum="5" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True"
+                            <Label Content="Owner correctness" Style="{StaticResource LabelStyle}"/>
+                            <WrapPanel Margin="49 0 0 0">
+                                <Label Style="{StaticResource LabelStyle}" Content="{Binding ElementName=sliderOwnerCorrectness, Path=Value}"/>
+                                <Slider  x:Name="sliderOwnerCorrectness" Minimum="1" Maximum="5" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True"
                                 Width="200" VerticalAlignment="Center" Margin="10 10 0 0" HorizontalAlignment="Center"
                                 Value="{Binding Review.OwnerCorrectnessGrade,Mode=OneWayToSource,UpdateSourceTrigger=PropertyChanged}"/>
+                            </WrapPanel>
                         </StackPanel>
 
-                        <StackPanel Orientation="Horizontal">
-                            <Label Content="Accommodation cleanliness:" Style="{StaticResource LabelStyle}"/>
-                            <Label Style="{StaticResource LabelStyle}" Content="{Binding ElementName=sliderCleanliness, Path=Value}"/>
-                            <Slider  x:Name="sliderCleanliness" Minimum="1" Maximum="5" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True"
+                        <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                            <Label Content="Accommodation cleanliness" Style="{StaticResource LabelStyle}"/>
+                            <WrapPanel>
+                                <Label Style="{StaticResource LabelStyle}" Content="{Binding ElementName=sliderCleanliness, Path=Value}"/>
+                                <Slider  x:Name="sliderCleanliness" Minimum="1" Maximum="5" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True"
                                 Width="200" VerticalAlignment="Center" Margin="10 10 0 0" HorizontalAlignment="Center"
                                 Value="{Binding Review.AccommodationCleannessGrade,Mode=OneWayToSource,UpdateSourceTrigger=PropertyChanged}"/>
+                            </WrapPanel>
                         </StackPanel>
 
-                        <StackPanel>
-                            <Label Content="Your comment" Style="{StaticResource LabelStyle}"/>
-                            <TextBox TextWrapping="Wrap" Width="400" Height="100" Margin="10 0 0 0" HorizontalAlignment="Left" Padding="5"
+                        <StackPanel Margin="0 10 0 0 ">
+                            <Grid Width="410" HorizontalAlignment="Left">
+                                <Label Content="Your comment" Style="{StaticResource LabelStyle}" HorizontalAlignment="Left"/>
+                                <TextBlock  HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="10">
+                                    <Run Text="{Binding ElementName=textBoxComment, Path=Text.Length, Mode=OneWay}"/>
+                                    <Run Text="/ 256"/>
+                                </TextBlock>
+                            </Grid>
+                            <TextBox x:Name="textBoxComment" TextWrapping="Wrap" Width="400" Height="100" Margin="10 0 0 0" HorizontalAlignment="Left" Padding="5"
                             Text="{Binding Review.GuestComment,Mode=OneWayToSource,UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
 
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
                             <Label Content="Accommodation photos" Style="{StaticResource LabelStyle}"/>
                             <Button x:Name="buttonUpload" Margin="10" HorizontalAlignment="Left" Cursor="Hand" Click="ButtonUploadClick">
                                 <WrapPanel Margin="5">
@@ -120,7 +130,7 @@
                             </Button>
                         </StackPanel>
 
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
                             <CheckBox x:Name="checkBoxRequiresRenovation" Margin="10 0 0 0" VerticalAlignment="Center"
                                       IsChecked="{Binding Review.RequiresRenovation, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}"
                                       Unchecked="CheckBoxRequiresRenovationUnchecked"/>
@@ -135,8 +145,14 @@
                                       ItemTemplate="{StaticResource ComboBoxItemTemplate}"/>
                         </StackPanel>
 
-                        <StackPanel Orientation="Vertical" IsEnabled="{Binding ElementName=checkBoxRequiresRenovation, Path=IsChecked}">
-                            <Label Content="Renovation comment" Style="{StaticResource LabelStyle}"/>
+                        <StackPanel Orientation="Vertical" IsEnabled="{Binding ElementName=checkBoxRequiresRenovation, Path=IsChecked}" Margin="0 10 0 0">
+                            <Grid Width="410" HorizontalAlignment="Left">
+                                <Label Content="Renovation comment" Style="{StaticResource LabelStyle}" HorizontalAlignment="Left"/>
+                                <TextBlock  HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="10">
+                                    <Run Text="{Binding ElementName=textBoxRenovationComment, Path=Text.Length, Mode=OneWay}"/>
+                                    <Run Text="/ 256"/>
+                                </TextBlock>
+                            </Grid>
                             <TextBox x:Name="textBoxRenovationComment" TextWrapping="Wrap" Width="400" Height="100" Margin="10 0 0 0" HorizontalAlignment="Left" Padding="5"
                                      Text="{Binding Review.RenovationComment, Mode=OneWayToSource,UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
